Fixed input border transition when blurring

--- a/app/component/search.scss
+++ b/app/component/search.scss
@@ -631,7 +631,7 @@ input.react-autosuggest__input{
     box-shadow: none;
     outline: none;
     border: none;
-    transition: border 0s;
+    // transition: border 0s;
   }
 }
 
